--- a/index.html
+++ b/index.html
@@ -1,209 +1,396 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AT&T Expert Path Checklist - Installation</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>AT&amp;T Expert Path Checklist – Installation</title>
 <style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-  background:#0f172a;
-  color:white;
-  margin:0;
-  padding:20px;
-}
-h1 { margin-top:0; }
-.controls button {
-  margin:5px 5px 5px 0;
-  padding:8px 12px;
-  border-radius:6px;
-  border:none;
-  cursor:pointer;
-}
-details {
-  margin-bottom:12px;
-  background:#1e293b;
-  border-radius:8px;
-  padding:12px;
-}
-summary {
-  font-weight:bold;
-  cursor:pointer;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-.badge {
-  font-size:12px;
-  padding:4px 8px;
-  border-radius:20px;
-}
-.done { background:#16a34a; }
-.notdone { background:#dc2626; }
-.stat-box {
-  margin-bottom:15px;
-}
-label {
-  display:block;
-  margin:6px 0;
-}
+  :root{
+    --bg:#070d1a;
+    --stroke:rgba(255,255,255,.08);
+    --muted:rgba(255,255,255,.72);
+    --muted2:rgba(255,255,255,.55);
+    --good:#22c55e;
+    --bad:#ef4444;
+  }
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{
+    margin:0;
+    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
+    background: radial-gradient(1200px 600px at 50% -120px, rgba(56,189,248,.22), rgba(7,13,26,0) 60%),
+                radial-gradient(900px 450px at 50% 60px, rgba(34,197,94,.12), rgba(7,13,26,0) 70%),
+                var(--bg);
+    color:#fff;
+    padding:16px;
+  }
+  .wrap{max-width:820px;margin:0 auto}
+  .hero{
+    background: linear-gradient(90deg, rgba(59,130,246,.18), rgba(34,197,94,.12));
+    border:1px solid var(--stroke);
+    border-radius:18px;
+    padding:16px 16px 14px;
+    box-shadow: 0 10px 30px rgba(0,0,0,.35);
+  }
+  h1{margin:0 0 6px;font-size:22px;line-height:1.2;letter-spacing:.2px}
+  .sub{margin:0 0 12px;font-size:13px;color:var(--muted)}
+  .topbar{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:space-between}
+  .stats{display:flex;gap:10px;flex-wrap:wrap}
+  .pill{
+    background:rgba(0,0,0,.18);
+    border:1px solid var(--stroke);
+    border-radius:14px;
+    padding:10px 12px;
+    min-width:170px;
+  }
+  .pill .label{color:var(--muted2);font-size:12px;margin-bottom:4px}
+  .pill .value{font-weight:700;font-size:14px}
+  .btns{display:flex;gap:8px;flex-wrap:wrap;justify-content:flex-end}
+  button{
+    appearance:none;-webkit-appearance:none;
+    border:1px solid var(--stroke);
+    background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+    color:#fff;
+    padding:10px 12px;
+    border-radius:12px;
+    font-weight:600;
+    font-size:13px;
+    cursor:pointer;
+    box-shadow: 0 8px 18px rgba(0,0,0,.22);
+    touch-action: manipulation;
+  }
+  button:active{transform:translateY(1px)}
+  button:disabled{opacity:.45;cursor:not-allowed}
+  .card{
+    margin-top:14px;
+    background:rgba(10,18,40,.72);
+    border:1px solid var(--stroke);
+    border-radius:18px;
+    overflow:hidden;
+    box-shadow: 0 12px 24px rgba(0,0,0,.28);
+  }
+  details.section{border-top:1px solid var(--stroke)}
+  details.section:first-child{border-top:none}
+  summary{
+    list-style:none;
+    cursor:pointer;
+    padding:14px 14px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:12px;
+    user-select:none;
+    -webkit-user-select:none;
+  }
+  summary::-webkit-details-marker{display:none}
+  .left{display:flex;align-items:center;gap:10px;min-width:0}
+  .chev{
+    width:22px;height:22px;
+    border:1px solid var(--stroke);
+    border-radius:10px;
+    display:flex;align-items:center;justify-content:center;
+    background:rgba(255,255,255,.03);
+    flex:0 0 auto;
+  }
+  .chev span{
+    display:inline-block;width:0;height:0;
+    border-left:6px solid rgba(255,255,255,.85);
+    border-top:5px solid transparent;border-bottom:5px solid transparent;
+    transform:rotate(0deg);
+    transition:transform .15s ease;
+  }
+  details[open] .chev span{transform:rotate(90deg)}
+  .title{min-width:0}
+  .title .kicker{font-size:12px;color:var(--muted2);margin-bottom:2px}
+  .title .name{
+    font-size:15px;font-weight:800;letter-spacing:.2px;
+    white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+  }
+  .badge{
+    display:inline-flex;align-items:center;gap:8px;
+    padding:8px 10px;border-radius:999px;
+    border:1px solid rgba(255,255,255,.10);
+    font-size:12px;font-weight:800;letter-spacing:.2px;
+    flex:0 0 auto;
+  }
+  .dot{width:10px;height:10px;border-radius:999px;background:var(--bad);box-shadow:0 0 0 4px rgba(239,68,68,.15)}
+  .badge.notdone{background:rgba(239,68,68,.14)}
+  .badge.done{background:rgba(34,197,94,.16)}
+  .badge.done .dot{background:var(--good);box-shadow:0 0 0 4px rgba(34,197,94,.16)}
+  .content{padding:2px 14px 14px}
+  .hint{margin:8px 0 10px;font-size:12px;color:var(--muted2)}
+  .item{
+    display:flex;gap:12px;align-items:flex-start;
+    padding:12px 12px;border:1px solid var(--stroke);
+    border-radius:14px;background:rgba(0,0,0,.16);
+    margin:10px 0;
+  }
+  .cb{width:22px;height:22px;flex:0 0 auto;margin-top:1px}
+  .txt{font-size:13px;color:rgba(255,255,255,.88);line-height:1.35}
+  .footer{margin:14px 2px 0;font-size:11px;color:rgba(255,255,255,.45);text-align:center}
 </style>
 </head>
 <body>
+<div class="wrap">
+  <div class="hero">
+    <h1>AT&amp;T Expert Path Checklist – Installation</h1>
+    <p class="sub">Guide to stay on track. Each section shows <b>DONE</b> (green) or <b>NOT DONE</b> (red). Progress saves automatically on this device.</p>
 
-<h1>AT&T Expert Path Checklist – Installation</h1>
+    <div class="topbar">
+      <div class="stats">
+        <div class="pill">
+          <div class="label">Sections done</div>
+          <div class="value"><span id="secDone">0</span> / <span id="secTotal">0</span></div>
+        </div>
+        <div class="pill">
+          <div class="label">Items done</div>
+          <div class="value"><span id="itemDone">0</span> / <span id="itemTotal">0</span></div>
+        </div>
+      </div>
 
-<div class="stat-box">
-Sections done: <span id="secDone">0</span> / <span id="secTotal">0</span><br>
-Items done: <span id="itemDone">0</span> / <span id="itemTotal">0</span>
+      <div class="btns">
+        <button type="button" onclick="expandAll()">Expand all</button>
+        <button type="button" onclick="collapseAll()">Collapse all</button>
+        <button type="button" onclick="resetChecklist()">Reset progress</button>
+        <button type="button" onclick="completeClear()" id="completeBtn" disabled>Complete &amp; Clear</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="card" id="checklist"></div>
+  <div class="footer">Tip: Add to Home Screen on iPhone for an “app-like” experience.</div>
 </div>
-
-<div class="controls">
-<button onclick="expandAll()">Expand All</button>
-<button onclick="collapseAll()">Collapse All</button>
-<button onclick="resetChecklist()">Reset Progress</button>
-<button onclick="completeClear()" id="completeBtn" disabled>Complete & Clear</button>
-</div>
-
-<div id="checklist"></div>
 
 <script>
-var STORAGE_KEY = "att_expert_checklist_v1";
+/* ES5-only (Safari-safe) */
+var STORAGE_KEY = "att_expert_path_install_v3";
 
 var sectionsData = [
-  { title:"Pre-Call",
-    items:["Perform Pre-Call within 15 min of dispatching by calling the CBR. If no answer, leave voicemail and send text."]
-  },
-  { title:"Marker 1 - Greet & Verify",
-    items:["Greet customer and verify install details.","Confirm SHM app downloaded."]
-  },
-  { title:"Marker 2 - Qualify to Terminal",
-    items:["Turn Optimeter ON at PFP.","Scope shutter jumper.","Perform True Test.","Confirm good light at CFST port."]
-  },
-  { title:"Marker 3 - Survey Customer & Premises",
-    items:["Discuss RG location.","Perform WiFi assessment.","Discuss WiFi extenders if needed."]
-  },
-  { title:"Marker 4 - Extend to Home",
-    items:["Turn Optimeter ON at Slack."]
-  },
-  { title:"Marker 5 - Connect to Gateway",
-    items:["Install fiber jack.","Perform True Test from shutter jumper.","Activate RG and verify registration."]
-  },
-  { title:"Marker 6 - Finalize Experience",
-    items:["Add extenders if requested.","Demonstrate Active Armor and My WiFi."]
-  },
-  { title:"Marker 7 - Verify, Thank & Close",
-    items:["Answer questions.","Thank customer and provide Make it Matter gift.","Finalize testing and close job."]
-  }
+  { kicker:"Section", name:"Pre-Call", items:[
+    "Perform Pre-Call within 15 min of dispatching by calling the CBR. If no answer, leave a voicemail and send a text message."
+  ]},
+  { kicker:"Marker 1", name:"GREET & VERIFY", items:[
+    "Greet the customer, confirm availability for duration of install, and confirm SHM app is downloaded."
+  ]},
+  { kicker:"Marker 2", name:"QUALIFY TO TERMINAL", items:[
+    "At PFP turn Optimeter ON and select appropriate scope link in Atlas.",
+    "Select direction Splitter to ONT and set location to Splitter.",
+    "Perform scoping of shutter jumper, APN and Port without leaving Viavi or EXFO App.",
+    "Perform True Test from assigned APN.",
+    "Confirm scoping and True tests uploaded to LSBBT.",
+    "At Prem confirm good light at assigned CFST port."
+  ]},
+  { kicker:"Marker 3", name:"SURVEY CUSTOMER & PREMISES", items:[
+    "Bring RG inside prem and have a conversation with the customer about best RG location.",
+    "To perform the WiFi assessment in Atlas select Tests, click the “+”, select your BAN, and select WiFi assessment. Connect phone with RG, add rooms and set RG location. Perform assessment and upload results.",
+    "Discuss WiFi extenders if needed and go over preferred installation."
+  ]},
+  { kicker:"Marker 4", name:"EXTEND TO HOME", items:[
+    "At Slack turn Optimeter ON and connect to phone via WiFi.",
+    "Select direction ONT to Splitter and select NID location.",
+    "Scope shutter jumper, drop and fiber IW.",
+    "Perform True Test end of your drop.",
+    "Upload and verify scopes and True Test in LSBBT."
+  ]},
+  { kicker:"Marker 5", name:"CONNECT TO GATEWAY", items:[
+    "Run fiber IW to RG location and install fiber jack.",
+    "At fiber jack location turn Optimeter ON and reconnect to app via WiFi.",
+    "Select location Fiber Jack and scope launch cable, IW, SFP and both ends of shutter jumper.",
+    "Perform True Test from shutter jumper. Verify scopes and true test in LSBBT.",
+    "Activate RG and verify customer is registered."
+  ]},
+  { kicker:"Marker 6", name:"FINALIZE EXPERIENCE", items:[
+    "Add extenders if requested and go over the SHM app.",
+    "Demonstrate Active Armor, navigate to My WiFi, WiFi customization, Speed Test, enable Push Notifications and Virtual Assistant."
+  ]},
+  { kicker:"Marker 7", name:"VERIFY, THANK & CLOSE", items:[
+    "Answer any customer questions and go over installation.",
+    "Thank customer for choosing AT&amp;T and provide Make it Matter gift.",
+    "Finalize testing and close job at Prem."
+  ]}
 ];
 
-function saveState() {
-  var items = document.querySelectorAll("input[type=checkbox]");
-  var state = [];
-  items.forEach(function(cb){ state.push(cb.checked); });
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
+function qs(sel, root){ return (root||document).querySelector(sel); }
+function qsa(sel, root){ return (root||document).querySelectorAll(sel); }
+
+function safeJSONParse(s){ try { return JSON.parse(s); } catch(e){ return null; } }
+
+function saveState(){
+  var cbs = qsa("input[type=checkbox]");
+  var arr = [];
+  for(var i=0;i<cbs.length;i++){ arr.push(!!cbs[i].checked); }
+  try { localStorage.setItem(STORAGE_KEY, JSON.stringify(arr)); } catch(e){}
 }
 
-function loadState() {
-  var saved = localStorage.getItem(STORAGE_KEY);
-  if(!saved) return;
-  var state = JSON.parse(saved);
-  var items = document.querySelectorAll("input[type=checkbox]");
-  items.forEach(function(cb, i){
-    if(state[i]) cb.checked = true;
-  });
+function loadState(){
+  var raw = null;
+  try { raw = localStorage.getItem(STORAGE_KEY); } catch(e){ raw = null; }
+  if(!raw) return;
+  var arr = safeJSONParse(raw);
+  if(!arr || !arr.length) return;
+  var cbs = qsa("input[type=checkbox]");
+  for(var i=0;i<cbs.length && i<arr.length;i++){ cbs[i].checked = !!arr[i]; }
 }
 
 function render(){
-  var container = document.getElementById("checklist");
-  container.innerHTML = "";
+  var host = qs("#checklist");
+  host.innerHTML = "";
 
-  sectionsData.forEach(function(section, sIndex){
+  for(var s=0; s<sectionsData.length; s++){
+    var sec = sectionsData[s];
+
     var details = document.createElement("details");
+    details.className = "section";
+    details.setAttribute("data-s", String(s));
 
     var summary = document.createElement("summary");
-    summary.innerHTML = section.title + 
-      " <span class='badge notdone' id='badge-"+sIndex+"'>NOT DONE</span>";
+
+    var left = document.createElement("div");
+    left.className = "left";
+
+    var chev = document.createElement("div");
+    chev.className = "chev";
+    var chevSpan = document.createElement("span");
+    chev.appendChild(chevSpan);
+
+    var title = document.createElement("div");
+    title.className = "title";
+
+    var kicker = document.createElement("div");
+    kicker.className = "kicker";
+    kicker.appendChild(document.createTextNode(sec.kicker));
+
+    var name = document.createElement("div");
+    name.className = "name";
+    name.appendChild(document.createTextNode(sec.name));
+
+    title.appendChild(kicker);
+    title.appendChild(name);
+
+    left.appendChild(chev);
+    left.appendChild(title);
+
+    var badge = document.createElement("div");
+    badge.className = "badge notdone";
+    badge.id = "badge-"+s;
+
+    var dot = document.createElement("span");
+    dot.className = "dot";
+
+    var badgeText = document.createElement("span");
+    badgeText.id = "badgeText-"+s;
+    badgeText.appendChild(document.createTextNode("NOT DONE"));
+
+    badge.appendChild(dot);
+    badge.appendChild(badgeText);
+
+    summary.appendChild(left);
+    summary.appendChild(badge);
+
+    var content = document.createElement("div");
+    content.className = "content";
+
+    var hint = document.createElement("div");
+    hint.className = "hint";
+    hint.appendChild(document.createTextNode("Check off items as you complete them."));
+    content.appendChild(hint);
+
+    for(var i=0;i<sec.items.length;i++){
+      var itemWrap = document.createElement("label");
+      itemWrap.className = "item";
+
+      var cb = document.createElement("input");
+      cb.type = "checkbox";
+      cb.className = "cb";
+      cb.setAttribute("data-s", String(s));
+      cb.setAttribute("data-i", String(i));
+
+      cb.addEventListener("change", update, false);
+      cb.addEventListener("click", update, false);
+      cb.addEventListener("touchend", function(){ setTimeout(update, 0); }, false);
+
+      var txt = document.createElement("div");
+      txt.className = "txt";
+      txt.innerHTML = sec.items[i];
+
+      itemWrap.appendChild(cb);
+      itemWrap.appendChild(txt);
+      content.appendChild(itemWrap);
+    }
 
     details.appendChild(summary);
+    details.appendChild(content);
+    host.appendChild(details);
+  }
 
-    section.items.forEach(function(item, iIndex){
-      var label = document.createElement("label");
-      var checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.onchange = update;
-      label.appendChild(checkbox);
-      label.appendChild(document.createTextNode(" " + item));
-      details.appendChild(label);
-    });
-
-    container.appendChild(details);
-  });
-
-  document.getElementById("secTotal").innerText = sectionsData.length;
+  qs("#secTotal").textContent = String(sectionsData.length);
 }
 
 function update(){
-  var sections = document.querySelectorAll("details");
-  var totalItems = 0;
+  var allCbs = qsa("input[type=checkbox]");
+  var totalItems = allCbs.length;
   var doneItems = 0;
   var secDone = 0;
 
-  sections.forEach(function(section, sIndex){
-    var checkboxes = section.querySelectorAll("input[type=checkbox]");
+  for(var i=0;i<totalItems;i++){
+    if(allCbs[i].checked) doneItems++;
+  }
+
+  var sections = qsa("details.section");
+  for(var s=0; s<sections.length; s++){
+    var secCbs = qsa("input[type=checkbox][data-s='"+s+"']", sections[s]);
     var done = 0;
+    for(var j=0;j<secCbs.length;j++){
+      if(secCbs[j].checked) done++;
+    }
 
-    checkboxes.forEach(function(cb){
-      totalItems++;
-      if(cb.checked){
-        done++;
-        doneItems++;
-      }
-    });
+    var badge = qs("#badge-"+s);
+    var badgeText = qs("#badgeText-"+s);
 
-    var badge = document.getElementById("badge-"+sIndex);
-    if(done === checkboxes.length && checkboxes.length > 0){
+    if(secCbs.length>0 && done === secCbs.length){
       badge.className = "badge done";
-      badge.innerText = "DONE";
+      badgeText.textContent = "DONE";
       secDone++;
     } else {
       badge.className = "badge notdone";
-      badge.innerText = "NOT DONE";
+      badgeText.textContent = "NOT DONE";
     }
-  });
+  }
 
-  document.getElementById("secDone").innerText = secDone;
-  document.getElementById("itemDone").innerText = doneItems;
-  document.getElementById("itemTotal").innerText = totalItems;
+  qs("#secDone").textContent = String(secDone);
+  qs("#itemDone").textContent = String(doneItems);
+  qs("#itemTotal").textContent = String(totalItems);
 
-  var completeBtn = document.getElementById("completeBtn");
-  completeBtn.disabled = !(doneItems === totalItems && totalItems > 0);
+  var completeBtn = qs("#completeBtn");
+  completeBtn.disabled = !(totalItems>0 && doneItems === totalItems);
 
   saveState();
 }
 
 function expandAll(){
-  document.querySelectorAll("details").forEach(function(d){ d.open = true; });
+  var ds = qsa("details.section");
+  for(var i=0;i<ds.length;i++){ ds[i].open = true; }
 }
 function collapseAll(){
-  document.querySelectorAll("details").forEach(function(d){ d.open = false; });
+  var ds = qsa("details.section");
+  for(var i=0;i<ds.length;i++){ ds[i].open = false; }
 }
 function resetChecklist(){
-  if(confirm("Reset all progress?")){
-    document.querySelectorAll("input[type=checkbox]").forEach(function(cb){ cb.checked = false; });
-    localStorage.removeItem(STORAGE_KEY);
-    update();
-  }
+  if(!confirm("Reset all progress?")) return;
+  var cbs = qsa("input[type=checkbox]");
+  for(var i=0;i<cbs.length;i++){ cbs[i].checked = false; }
+  try{ localStorage.removeItem(STORAGE_KEY); }catch(e){}
+  update();
 }
 function completeClear(){
-  if(confirm("Checklist complete. Clear for next job?")){
-    resetChecklist();
-  }
+  if(!confirm("Checklist complete. Clear for next job?")) return;
+  resetChecklist();
 }
 
+/* boot */
 render();
-setTimeout(loadState, 100);
+loadState();
+update();
 </script>
-
 </body>
 </html>
